# music-ocr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: build_preprocessor.yaml  train.yaml  train_finetuning.yaml  train_pretraining.yaml
config/architecture/: glm_ocr.yaml  llava.yaml  qwen25vl.yaml  smt.yaml
config/dataset/: grandstaff.yaml  grandstaff_ekern.yaml  grandstaff_test.yaml  grandstaff_train.yaml  grandstaff_val.yaml  synth_omr_500k.yaml  synth_omr_500k_train.yaml  synth_omr_500k_val.yaml  synthetic_omr_100k.yaml  synthetic_omr_500k.yaml
config/preprocessor/: glm_ocr.yaml  llava.yaml  qwen25vl.yaml  smt.yaml
generator/: generator_api.py
generator/utils/: kern_annotation_parser.py  kern_generator.py  kern_to_png.py  upload_to_hf.py  utils.py  worker_script.py
music_ocr/: data.py  kern.py  tokenizer.py  trainer.py  utils.py
music_ocr/generator/: dataset.py  generator_api.py  hf.py
music_ocr/generator/utils/: generate_hf_dataset.py  kern_annotation_parser.py  kern_generator.py  kern_to_png.py  upload_to_hf.py
music_ocr/model/: __init__.py  base.py  glm_ocr.py  llava.py  qwen25vl.py  smt.py
scripts/: build_preprocessor.py  generate_hf_dataset.py  train.py  upload_to_hf.py  worker_script.py
tests/generator/: test_kern_annotation_parser.py  test_kern_generator.py
