[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "loguru>=0.7.3",
    "lovely-tensors>=0.1.22",
    "omegaconf>=2.3.0",
    "papermill>=2.7.0",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tensordict>=0.11.0",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "typer>=0.24.1",
    "wandb>=0.25.1",
]

[tool.hatch.build.targets.wheel]
packages = ["music_ocr"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "types-PyYAML>=6.0.12.20241230",
]


[tool.pytest]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "music_ocr",
    "tests",
]
norecursedirs = [
    "wandb-logs",
    "checkpoints",
    "data",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache"
]

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["datasets.*", "tensordict.*", "torchvision.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]
include = [
    "music_ocr/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
]

[tool.ty.src]
include = ["music_ocr", "tests", "scripts"]
